fix: bare minimum to get this working on modern minecraft